# tempmail

./: .env.example  .gitignore  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: ci.yml
app/: cleanup.py  config.py  database.py  main.py  models.py  redis_client.py
app/emails/: dependencies.py  models.py  router.py  schemas.py  service.py
app/messages/: models.py  router.py  schemas.py  service.py  webhook_schemas.py
app/shared/: utils.py
migrations/: env.py
migrations/versions/: 82749045f890_create_mailbox_and_message_tables.py
tests/: conftest.py  test_mailbox.py
